test/TestPhases/typechecker/invalid/unary6.blc

@[EntryPoint]
activity main()

    const i: int8 = -128
    var j: int8
    j = -i  // unary minus overflow on int value

    await true
end